chore: updated ng-select, eslint-plugin, eslint-plugin-template, and template-parser versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Leapp",
-  "version": "0.8.1",
+  "version": "0.8.0",
   "author": {
     "name": "besharp",
     "email": "info@besharp.it"
@@ -166,7 +166,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@electron/remote": "^2.0.1",
-    "@ng-select/ng-select": "~6.1.0",
+    "@ng-select/ng-select": "7.4.0",
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@sebgroup/magic-iframe": "1.1.2",
@@ -232,10 +232,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.7",
     "@angular-eslint/builder": "12.5.0",
-    "@angular-eslint/eslint-plugin": "4.2.0",
-    "@angular-eslint/eslint-plugin-template": "4.2.0",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/schematics": "12.5.0",
-    "@angular-eslint/template-parser": "4.2.0",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "^12.2.7",
     "@angular/compiler-cli": "^12.2.7",
     "@angular/language-service": "~12.2.7",
