--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,10 +18,11 @@ jobs:
       - run: pip install mkdocs-img2fig-plugin
       - run: pip install git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git
       - run: pip install mike
-      - run: > 
-             PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
-      - run: echo $PACKAGE_VERSION
-      - run: mike deploy --push --update-aliases $PACKAGE_VERSION latest
+      - run: | 
+             echo "PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')" >> $GITHUB_ENV
+      - run: | 
+             echo "${{env.PACKAGE_VERSION}}
+      # - run: mike deploy --push --update-aliases $PACKAGE_VERSION latest
       # - run: mkdocs gh-deploy --force
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
