--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,9 @@ jobs:
              echo "PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')" >> $GITHUB_ENV
       - run: | 
              echo "${{env.PACKAGE_VERSION}}"
-      - run: ls -la
+      - run: |
+             git config --global user.name Alessandro Gaggia
+             git config --global user.email alex@besharp.it
       - run: mike deploy --push --update-aliases ${{env.PACKAGE_VERSION}} latest
       # - run: mkdocs gh-deploy --force
 env:
