--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,8 +25,9 @@ jobs:
       - run: |
              git config --global user.name Alessandro Gaggia
              git config --global user.email alex@besharp.it
+      - run: git fetch origin gh-pages --depth=1       
       - run: mike deploy --force --push --update-aliases ${{env.PACKAGE_VERSION}} latest
       - run: mike set-default --push latest
-      #- run: mkdocs gh-deploy --force
+      # - run: mkdocs gh-deploy --force
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
