--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,8 +26,9 @@ jobs:
              git config --global user.name Alessandro Gaggia
              git config --global user.email alex@besharp.it
       - run: git fetch origin gh-pages --depth=1       
-      - run: mike deploy --force --push --update-aliases --force --ignore ${{env.PACKAGE_VERSION}} latest
+      - run: mike deploy --force --push ${{env.PACKAGE_VERSION}} latest
       - run: mike set-default --push latest
+      
       # - run: mkdocs gh-deploy --force
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
