--- a/package.json
+++ b/package.json
@@ -232,10 +232,11 @@
     "electron-installer-dmg": "3.0.0",
     "electron-packager": "15.4.0",
     "electron-rebuild": "3.2.5",
-    "eslint": "^8.8.0",
+    "eslint": "^8.10.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-prefer-arrow": "latest",
+    "gushio": "~0.5.0",
     "husky": "^7.0.0",
     "jasmine": "^3.7.0",
     "jasmine-core": "~3.7.1",
@@ -252,8 +253,7 @@
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
     "typescript": "4.5.5",
-    "util": "^0.12.4",
-    "gushio": "~0.5.0"
+    "util": "^0.12.4"
   },
   "browser": {
     "crypto": false
