--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,16 +19,16 @@ jobs:
       - run: pip install git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git
       - run: pip install mike
       - run: |
-             echo "PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')" >> $GITHUB_ENV
+             echo "PACKAGE_VERSION=$(cat desktop-app/package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')" >> $GITHUB_ENV
       - run: |
              echo "${{env.PACKAGE_VERSION}}"
       - run: |
              git config --global user.name Alessandro Gaggia
              git config --global user.email alex@besharp.it
-      - run: git fetch origin gh-pages --depth=1       
+      - run: git fetch origin gh-pages --depth=1
       - run: mike deploy --force --push --update-aliases ${{env.PACKAGE_VERSION}} latest
       - run: mike set-default --push latest
-      
+
       # - run: mkdocs gh-deploy --force
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
