chore: copy README.md in core's dist

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -34,8 +34,7 @@
   },
   "include": [
     "./**/*.ts",
-    "./package.json",
-    "./README.md"
+    "./package.json"
   ],
   "exclude": [
     "./dist/**",
