fix: wrong author

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Leapp",
   "author": {
-    "name": "besharp",
-    "email": "info@besharp.it"
+    "name": "Noovolari",
+    "email": "info@noovolari.com"
   },
   "repository": "https://github.com/Noovolari/leapp",
   "private": true,
