--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,6 @@ Thumbs.db
 # Windows certificate
 packages/desktop-app/windows.pfx
 
-**/package-lock.json
-
 start.sh
 buildAll.sh
 
@@ -61,7 +59,6 @@ buildAll.sh
 site/
 temp/
 
-packages/core/package-lock.json
 packages/core/node_modules
 packages/core/dist
 
@@ -70,9 +67,10 @@ packages/cli/*-error.log
 packages/cli/.nyc_output
 packages/cli/dist
 packages/cli/lib
-packages/cli/package-lock.json
 packages/cli/tmp
 packages/cli/yarn.lock
 packages/cli/node_modules
 packages/cli/oclif.manifest.json
 /release/
+
+lerna-debug.log
