--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -3,7 +3,7 @@ name: Leapp CLI CI/CD
 on:
   push:
     branches:
-      - 'master'
+      - 'deploy-test'
 
   workflow_dispatch:
 
@@ -103,7 +103,7 @@ jobs:
           cd packages/cli
           echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
           echo "Releasing on npm... (ABORTED)"
-#          npm run release-npm
+      #    npm run release-npm
       - name: Release Homebrew
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -114,4 +114,4 @@ jobs:
           git config --global user.email "info@noovolari.com"
           cd packages/cli
           echo "Releasing on homebrew... (ABORTED)"
-#          npm run release-homebrew
+          npm run release-homebrew
