--- a/.github/workflows/core-ci-cd.yml
+++ b/.github/workflows/core-ci-cd.yml
@@ -21,8 +21,10 @@ jobs:
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+        with:
+          ref: deploy-test
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
       - name: Bootstrap
@@ -52,7 +54,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          ref: master
+          ref: deploy-test
 
       - name: Check Tag Validity
         id: validator
@@ -79,8 +81,10 @@ jobs:
     runs-on: ubuntu-latest
     if: needs.check_for_release.outputs.to-release == 1
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+        with:
+          ref: deploy-test
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
       - name: Bootstrap
