--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -3,7 +3,7 @@ name: Leapp CLI CI/CD
 on:
   push:
     branches:
-      - 'deploy-test'
+      - 'master'
 
   workflow_dispatch:
 
@@ -22,8 +22,6 @@ jobs:
           git config --global core.autocrlf false
           git config --global core.eol lf
       - uses: actions/checkout@v3
-        with:
-          ref: deploy-test
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
@@ -56,7 +54,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          ref: deploy-test
+          ref: master
 
       - name: Check Tag Validity
         id: validator
@@ -84,8 +82,6 @@ jobs:
     if: needs.check_for_release.outputs.to-release == 1
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: deploy-test
       - uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -106,8 +102,7 @@ jobs:
         run: |
           cd packages/cli
           echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
-          echo "Releasing on npm... (ABORTED)"
-      #    npm run release-npm
+          npm run release-npm
       - name: Release Homebrew
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -117,5 +112,4 @@ jobs:
           git config --global user.name "Noovolari Bot"
           git config --global user.email "info@noovolari.com"
           cd packages/cli
-          echo "Releasing on homebrew... (ABORTED)"
           npm run release-homebrew
