--- a/.github/workflows/core-ci-cd.yml
+++ b/.github/workflows/core-ci-cd.yml
@@ -3,7 +3,7 @@ name: Leapp Core CI/CD
 on:
   push:
     branches:
-      - 'deploy-test'
+      - 'master'
 
   workflow_dispatch:
 
@@ -22,8 +22,6 @@ jobs:
           git config --global core.autocrlf false
           git config --global core.eol lf
       - uses: actions/checkout@v3
-        with:
-          ref: deploy-test
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
@@ -54,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          ref: deploy-test
+          ref: master
 
       - name: Check Tag Validity
         id: validator
@@ -82,8 +80,6 @@ jobs:
     if: needs.check_for_release.outputs.to-release == 1
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: deploy-test
       - uses: actions/setup-node@v3
         with:
           node-version: 16
