--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          ref: master
+          ref: test-desktop-app-cd
 
       - name: Check Tag Validity
         id: validator
