--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Build Win desktop app
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           npm install
           npm run release-win
           rm -Rf ./release/win-unpacked
@@ -74,7 +74,7 @@ jobs:
 
       - name: Release draft to S3
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
           TAG_VERSION=${TAG_VERSION:1}
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
@@ -87,7 +87,7 @@ jobs:
 
       - name: Build Linux desktop app
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           npm install
           npm run release-linux
           rm -Rf ./release/linux-unpacked
@@ -104,7 +104,7 @@ jobs:
 
       - name: Release draft to S3
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
           TAG_VERSION=${TAG_VERSION:1}
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
@@ -119,7 +119,7 @@ jobs:
         env:
           APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           KEY_CHAIN=build.keychain
           CERTIFICATE_P12=certificate.p12
           CERTIFICATE_APPLICATION_P12=certificate-application.p12
@@ -165,7 +165,7 @@ jobs:
 
       - name: Release draft to S3
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
           TAG_VERSION=${TAG_VERSION:1}
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
@@ -180,7 +180,7 @@ jobs:
         env:
           APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           KEY_CHAIN=build.keychain
           CERTIFICATE_P12=certificate.p12
           CERTIFICATE_APPLICATION_P12=certificate-application.p12
@@ -226,7 +226,7 @@ jobs:
 
       - name: Release draft to S3
         run: |
-          cd desktop-app
+          cd packages/desktop-app
           TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
           TAG_VERSION=${TAG_VERSION:1}
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
