--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -233,7 +233,7 @@ jobs:
   publish-draft:
     runs-on: ubuntu-latest
     environment: prod
-    needs: [ build-linux, build-win, build-macos-arm, build-macos-x64 ]
+    needs: [ tag-validation, build-linux, build-win, build-macos-arm, build-macos-x64 ]
     if: needs.tag-validation.outputs.validator == 1
     steps:
 
@@ -248,7 +248,6 @@ jobs:
         run: |
           TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
           TAG_VERSION=${TAG_VERSION:1}
-          echo "${{ env.S3_BUCKET }}/$TAG_VERSION/"
           aws s3 rm "${{ env.S3_BUCKET }}/latest" --recursive
           aws s3 cp "${{ env.S3_BUCKET }}/$TAG_VERSION/" "${{ env.S3_BUCKET }}/latest" --recursive
   publish-changelog:
