--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,14 +2,17 @@
   "name": "@noovolari/leapp-cli",
   "description": "Leapp's Command Line Interface\n\nIt relies on Leapp Core, which encapsulates the domain logic.\n\nFor more information about the project visit the [site](www.leapp.cloud).",
   "version": "0.1.8",
-  "author": "besharp <info@besharp.it>",
+  "author": {
+    "name": "Noovolari",
+    "email": "info@noovolari.com"
+  },
   "bin": {
     "leapp": "./bin/run"
   },
   "bugs": "https://github.com/Noovolari/leapp/issues",
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.16.5",
-    "@noovolari/leapp-core": "0.1.106",
+    "@noovolari/leapp-core": "0.1.107",
     "@oclif/core": "1.6.0",
     "@oclif/plugin-help": "^5.1.12",
     "@types/inquirer": "^8.2.0",
