--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -196,6 +196,7 @@
     "uuid": "~8.3.2",
     "v8-compile-cache": "~2.3.0",
     "wait-on": "^6.0.0",
+    "winston": "^3.7.2",
     "zlib": "~1.0.5",
     "zone.js": "~0.11.4"
   },
