--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -129,7 +129,7 @@
     "prepare docs": "gushio gushio/replace-header-cli-index-doc.js",
     "clean": "gushio gushio/target-clean.js",
     "test": "jest",
-    "prepack": "gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes && gushio gushio/replace-header-cli-index-doc.js",
+    "prepack": "gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes",
     "release": "gushio gushio/target-release.js"
   },
   "types": "dist/index.d.ts"
