--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -130,7 +130,8 @@
     "clean": "gushio gushio/target-clean.js",
     "test": "jest",
     "prepack": "gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes",
-    "release": "gushio gushio/target-release.js"
+    "release": "gushio gushio/target-release.js",
+    "release-npm": "gushio gushio/target-npm-release.js"
   },
   "types": "dist/index.d.ts"
 }
