--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -64,6 +64,10 @@ jobs:
           rm -Rf ./release/.cache
           rm -Rf ./release/builder-debug.yml
           rm -Rf ./release/builder-effective-config.yaml
+          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
+          TAG_VERSION=${TAG_VERSION:1}
+          rm "./release/Leapp-$TAG_VERSION-win.zip"
+          zip "./release/Leapp-$TAG_VERSION-win.zip" "./release/Leapp Setup $TAG_VERSION.exe"
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -287,3 +291,16 @@ jobs:
       - name: Invalidate distribution
         run: |
           aws cloudfront create-invalidation --distribution-id ${{ env.DISTRIBUTION_ID }} --paths "/*"
+  publish-github-release:
+    runs-on: ubuntu-latest
+    needs: [ invalidate-distribution, tag-validation ]
+    if: needs.tag-validation.outputs.validator == 1
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Create GitHub Release
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          body: "Full changelog & Downloads ⇒ https://www.leapp.cloud/releases"
+          tag: ${{ needs.tag-validation.outputs.tag-version }}
