chore: added localshortcut to use instead of globalshortcut, so we prevent registering outside leapp

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   },
   "lint-staged": {
     "*.{ts,html}": "eslint --fix"
+  },
+  "dependencies": {
+    "electron-localshortcut": "^3.2.1"
   }
 }
