--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -158,6 +158,7 @@
     "electron-osx-sign": "~0.5.0",
     "electron-reload": "^1.5.0",
     "electron-updater": "^4.3.8",
+    "electron-localshortcut": "^3.2.1",
     "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
     "follow-redirects": "^1.14.7",
