test: fixed typescript errors in core tests

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -37,7 +37,7 @@
   "exclude": [
     "./dist/**",
     "./gushio/**",
-    "/**/*.test.ts",
-    "/**/*.spec.ts"
+    "**/*.test.ts",
+    "**/*.spec.ts"
   ]
 }
