--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,8 @@
   },
   "description": "Leapp's core module",
   "peerDependencies": {
+    "@azure/msal-node": "^1.9.0",
+    "@azure/msal-node-extensions": "^1.0.0-alpha.17",
     "@babel/plugin-proposal-decorators": "^7.16.5",
     "@types/aws-sdk": "^2.7.0",
     "@types/node": "^16.9.4",
@@ -22,6 +24,8 @@
     "crypto-js": "~4.0.0",
     "date-fns": "^2.26.0",
     "es6-shim": "^0.35.6",
+    "express": "^4.18.1",
+    "express-session": "^1.17.2",
     "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
     "follow-redirects": "^1.14.9",
@@ -34,8 +38,8 @@
     "jwt-decode": "~3.1.2",
     "keytar": "7.7.0",
     "ms": "^2.1.3",
-    "node-log-rotate": "~0.1.5",
     "node-ipc": "9.2.1",
+    "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
     "reflect-metadata": "^0.1.13",
     "rimraf": "~3.0.2",
