--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
     "aws-sdk-mock": "5.3.0",
+    "axios": "^0.27.2",
     "chdir": "0.0.0",
     "class-transformer": "^0.4.0",
     "compare-versions": "^3.6.0",
@@ -34,8 +35,8 @@
     "jwt-decode": "~3.1.2",
     "keytar": "7.7.0",
     "ms": "^2.1.3",
-    "node-log-rotate": "~0.1.5",
     "node-ipc": "9.2.1",
+    "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
     "reflect-metadata": "^0.1.13",
     "rimraf": "~3.0.2",
