--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -144,6 +144,7 @@
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
     "aws-sdk-mock": "5.3.0",
+    "axios": "^0.27.2",
     "bootstrap": "~4.6.0",
     "chdir": "0.0.0",
     "class-transformer": "^0.4.0",
