chore: test windows download certificate and decode on the fly

--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Build Win desktop app
         run: |
+          npm update
           npm install
           npm run setup
           cd packages/desktop-app
