--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -25,13 +25,13 @@ jobs:
 
       - name: Build Win desktop app
         run: |
-          npm update
-          npm install
+          node -v
           npm run setup
           cd packages/desktop-app
           WIN_CERTIFICATE=windows_sign_certificate.pfx
           echo "Recreate the window certificate from the secure environment variable"
           echo "${{ env.WIN_CERTIFICATE }}" | base64 --decode > $WIN_CERTIFICATE
+          npm install
           npm run release-win
           rm -Rf ./release/win-unpacked
           rm -Rf ./release/.cache
